[package]
name = "rcc-rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
chrono = "0.4.45"
rand = "0.10.2"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
dashmap = "6.2.1"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
arc-swap = "1.9.2"
xxhash-rust = { version = "0.8.17", features = ["xxh3"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
